--- a/styles/styleSlider.css
+++ b/styles/styleSlider.css
@@ -10,6 +10,10 @@
     margin-bottom: 10vh;
 }
 
+.slider h2{
+    margin-bottom: 4vh;
+}
+
 .slider .list{
     position: relative;
     height: 410px;
