--- a/styles/styleSlider.css
+++ b/styles/styleSlider.css
@@ -1,6 +1,7 @@
 .slider{
     grid-column: 1/ 7;
-    grid-row: 1/ 4;
+    grid-row: 2/ 4;
+    gap: 6vh;
     width: 900px;
     height: 500px;
     margin: auto;
